--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             
             <div class="window-content">
               <div class="text-center">
-                <h1>Retro Website</h1>
+                <h1>Nu'man Nasyar MZ</h1>
                 <p>A nostalgic journey back to the early web</p>
               </div>
               
