Update Tentang Saya

--- a/index.html
+++ b/index.html
@@ -152,11 +152,9 @@
                 </div>
 
                 <section class="content-section">
-                  <h2 class="section-title yellow-bg">About Me</h2>
+                  <h2 class="section-title yellow-bg">Tentang Saya</h2>
                   <p>
-                    Welcome to my retro-inspired website! I'm a developer who
-                    loves creating unique web experiences that blend nostalgia
-                    with modern functionality.
+                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim ipsam quis, corrupti veritatis nesciunt accusantium laudantium? Nesciunt expedita excepturi ea doloremque veritatis odit dignissimos nemo nobis nisi consequuntur, quibusdam itaque.
                   </p>
                 </section>
 
