Abis update projek

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </section>
 
                 <section class="content-section">
-                  <h2 class="section-title teal-bg">My Projects</h2>
+                  <h2 class="section-title teal-bg">Projek-Projek</h2>
                   <div class="projects-grid">
                     <div class="project-card">
                       <div class="project-image pink-bg">
